# cellmap-schemas

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  test.yml
api/annotation/: index.html
api/multiscale/cosem/: index.html
api/multiscale/neuroglancer_n5/: index.html
cellmap-conventions/s3-overview/: index.html
development/: index.html
docs/: development.md  index.md
docs/api/: annotation.md  cosem.md  neuroglancer_n5.md
docs/api/multiscale/: cosem.md  neuroglancer_n5.md
docs/cellmap-conventions/: annotation.md  s3-overview.md
src/cellmap_schemas/: __about__.py  annotation.py  base.py  cli.py  cosem.py  n5_wrap.py  neuroglancer_n5.py
src/cellmap_schemas/multiscale/: cosem.py  neuroglancer_n5.py
tests/: conftest.py  test_annotation.py  test_base.py  test_cli.py  test_cosem_multiscale.py  test_docs.py  test_n5.py  test_neuroglancer_n5_multiscale.py
tests/test_multiscale/: test_cosem.py  test_neuroglancer_n5.py
