[tool.poetry]
name = "cellmap-schemas"
version = "0.1.4"
description = "Schemas for data used by the Cellmap project team at Janelia Research Campus."
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
readme = "README.md"
packages = [{include = "cellmap_schemas", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-zarr = "^0.5.0"
s3fs = "^2023.10.0"
rich = "^13.7.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vld8 = 'cellmap_schemas.cli:validate_cli'

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"