[tool.poetry]
name = "cellmap-schemas"
version = "0.4.0"
description = "Schemas for data used by the Cellmap project team at Janelia Research Campus."
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
readme = "README.md"
packages = [{include = "cellmap_schemas", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-zarr = "^0.5.2"
s3fs = "^2023.10.0"
rich = "^13.7.0"



[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
coverage = "^7.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest-examples = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cellmap-schemas = 'cellmap_schemas.cli:cli'

[tool.ruff]
line-length = 100

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
